fixed width error on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -218,6 +218,17 @@ h1 {
 /* ANIMATE BANNER TEXT MARQUEE MOBILE */
 
 @media screen and (max-width: 767px) {
+  nav {
+    margin-top: 15px;
+  }
+
+  .banner {
+    display: inline-block;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+  }
+
   .banner div {
     animation: animateBannerText 10s linear infinite;
   }
@@ -232,7 +243,7 @@ h1 {
       transform: translateX(100%);
     }
     100% {
-      transform: translateX(0%);
+      transform: translateX(-100%);
     }
   }
 }
